# Trading-algorithms

./: .env.dev  .env.example  .gitignore  .gitpod.Dockerfile  .gitpod.yml  AGENDTS.md  AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  GLOSSARY.md  Makefile.toml  PROJECT_STRUCTURE.md  README.md  TECH_STACK.md  error_log.txt
.ai/: 00_MAIN.md
1_estrutuctura/: e.txt  flujo.txt  (+3 more)
apps/kairos-api/: .env.example  API_DOCS.md  CHANGELOG.md  Cargo.toml  README.md  SCHEMAS.md  STRUCTURE.md  TESTING.md  TODO.md  pom.xml
apps/kairos-api/.ai/: 00_MAIN.md
apps/kairos-api/src/: main.rs
apps/kairos-api/src/clients/: core_grpc.rs  db_reader.rs  mod.rs
apps/kairos-api/src/graphql/: mod.rs  mutation.rs  query.rs  schema.rs
apps/kairos-api/src/main/java/com/kairos/: KairosApiApplication.java
apps/kairos-api/src/main/java/com/kairos/config/: RedisConfig.java  WebConfig.java  WebSocketConfig.java
apps/kairos-api/src/main/java/com/kairos/controller/: BalanceController.java  MarketDataController.java  OrderController.java
apps/kairos-api/src/main/java/com/kairos/grpc/: TradingEngineGrpcClient.java
apps/kairos-api/src/main/java/com/kairos/model/: MarketTick.java  OhlcvCandle.java  Order.java
apps/kairos-api/src/main/java/com/kairos/repository/: MarketTickRepository.java  OhlcvRepository.java  OrderRepository.java
apps/kairos-api/src/main/java/com/kairos/service/: MarketDataService.java  RealtimeDataService.java  TradingService.java
apps/kairos-api/src/main/resources/: application.yml
apps/kairos-core/: .env.example  API_DOCS.md  CHANGELOG.md  Cargo.toml  ENVIRONMENT.md  README.md  TODO.MD
apps/kairos-core/.ai/: 00_MAIN.md
apps/kairos-core/.ai/skills/binance-realtime/: SKILL.md
apps/kairos-core/.ai/skills/config-environment/: SKILL.md
apps/kairos-core/.ai/skills/error-handling/: SKILL.md
apps/kairos-core/.ai/skills/grpc-service/: SKILL.md
apps/kairos-core/.ai/skills/logging/: SKILL.md
apps/kairos-core/.ai/skills/testing/: SKILL.md
apps/kairos-core/config/: default.toml  development.toml  local.toml.example  production.toml  test.toml
apps/kairos-core/docs/: BINANCE_REALTIME_SUCCESS.md  CONFIG_ENVIRONMENT.md  ERROR_HANDLING.md  ERROR_HANDLING_LOGGING.md  ERROR_LOGGING_INTEGRATION.md  LOGGING.md  TESTING.md
apps/kairos-core/src/: config.rs  logging.rs  main.rs
apps/kairos-core/src/adapters/: mod.rs
apps/kairos-core/src/adapters/inbound/: mod.rs
apps/kairos-core/src/adapters/inbound/feed_handler/: binance.rs  error.rs  mod.rs  okx.rs
apps/kairos-core/src/adapters/inbound/feed_handler/documentacion/: BINANCE_GUIDE.md
apps/kairos-core/src/adapters/inbound/grpc_server/: mod.rs
apps/kairos-core/src/adapters/outbound/: mod.rs
apps/kairos-core/src/adapters/outbound/execution/: binance.rs  error.rs  mod.rs  okx.rs
apps/kairos-core/src/adapters/outbound/persistence/: dragonfly.rs  error.rs  mod.rs  timescale.rs
apps/kairos-core/src/application/: engine.rs  mod.rs  state.rs
apps/kairos-core/src/domain/: entities.rs  mod.rs
apps/kairos-core/src/domain/risk/: mod.rs
apps/kairos-core/src/domain/strategies/: arbitrage.rs  mod.rs  triangulation.rs
dominio/: Cargo.toml
dominio/example/: quick_demo.rs
dominio/src/: lib.rs  prelude.rs
dominio/src/aggregates/: mod.rs
dominio/src/entities/: mod.rs  order.rs
dominio/src/value_objects/: instrument.rs  mod.rs  money.rs  price.rs  quantity.rs  spread.rs  symbol.rs
(+69 files in other folders)
