[package]
name = "kairos-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kairos-api"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
redis.workspace = true
tonic.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
async-graphql.workspace = true
async-graphql-axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true

# Shared libraries
kairos-domain.workspace = true
kairos-proto.workspace = true

# Additional dependencies
hyper = "1.5"
